syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

import "Repositories/Contracts/Data/Notifications/Matches/document_notification_match.proto";
import "Repositories/Contracts/Data/Notifications/Parameters/document_notification_parameter.proto";

message DocumentNotificationDb {
  string id = 1;
  DocumentNotificationMatchDb match = 2;
  string template_id = 3;
  repeated DocumentNotificationParameterDb parameters = 4;
  string recipient_attribute_id = 5 [deprecated = true]; // for backwards compatibility
  repeated string recipient_attribute_ids = 6;
  repeated string recipient_roles = 7;
}
